// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"builtin" can be used to execute builtin commands 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

ncolors = $(shell tput colors)
ifeq ($(shell test \${ncolors} -ge 8; echo $$?),0)
	GREEN=$(shell tput setaf 2)
	BOLD=$(shell tput bold)
	NORMAL=$(shell tput sgr0)
endif

.PHONY: all
all: help

.PHONY: foo
foo:                          ## No description
	@echo \\"🤖 Running task \${GREEN}foo\${NORMAL}...\\"
	node lib/__tests__/tasks/fixtures/builtin-example.task.js
	@echo \\"🤖 Finished task \${GREEN}foo\${NORMAL}.\\"

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\${BOLD}COMMANDS:\${NORMAL}\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\${GREEN}%-30s\${NORMAL} %s\\\\n\\", $$1, $$2}'
"
`;

exports[`"condition" can be used to define a command that will determine if a task should be skipped 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

ncolors = $(shell tput colors)
ifeq ($(shell test \${ncolors} -ge 8; echo $$?),0)
	GREEN=$(shell tput setaf 2)
	BOLD=$(shell tput bold)
	NORMAL=$(shell tput sgr0)
endif

.PHONY: all
all: help

.PHONY: foo
foo:                          ## No description
	@echo \\"🤖 Running task \${GREEN}foo\${NORMAL}...\\"
	foo bar
	@echo \\"🤖 Finished task \${GREEN}foo\${NORMAL}.\\"

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\${BOLD}COMMANDS:\${NORMAL}\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\${GREEN}%-30s\${NORMAL} %s\\\\n\\", $$1, $$2}'
"
`;

exports[`"requiredEnv" can be used to specify required environment variables 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

ncolors = $(shell tput colors)
ifeq ($(shell test \${ncolors} -ge 8; echo $$?),0)
	GREEN=$(shell tput setaf 2)
	BOLD=$(shell tput bold)
	NORMAL=$(shell tput sgr0)
endif

.PHONY: all
all: help

.PHONY: foo
foo:                          ## No description
	@echo \\"🤖 Running task \${GREEN}foo\${NORMAL}...\\"
	@echo \\"🤖 Finished task \${GREEN}foo\${NORMAL}.\\"

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\${BOLD}COMMANDS:\${NORMAL}\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\${GREEN}%-30s\${NORMAL} %s\\\\n\\", $$1, $$2}'
"
`;

exports[`empty task 1`] = `undefined`;

exports[`env() can be used to add environment variables 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

ncolors = $(shell tput colors)
ifeq ($(shell test \${ncolors} -ge 8; echo $$?),0)
	GREEN=$(shell tput setaf 2)
	BOLD=$(shell tput bold)
	NORMAL=$(shell tput sgr0)
endif

.PHONY: all
all: help

.PHONY: my-task
my-task:                      ## No description
	@echo \\"🤖 Running task \${GREEN}my-task\${NORMAL}...\\"
	@echo \\"🤖 Finished task \${GREEN}my-task\${NORMAL}.\\"

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\${BOLD}COMMANDS:\${NORMAL}\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\${GREEN}%-30s\${NORMAL} %s\\\\n\\", $$1, $$2}'
"
`;

exports[`multiple "exec" commands 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

ncolors = $(shell tput colors)
ifeq ($(shell test \${ncolors} -ge 8; echo $$?),0)
	GREEN=$(shell tput setaf 2)
	BOLD=$(shell tput bold)
	NORMAL=$(shell tput sgr0)
endif

.PHONY: all
all: help

.PHONY: hello
hello:                        ## hello, world
	@echo \\"🤖 Running task \${GREEN}hello\${NORMAL}...\\"
	@export FOO=bar; \\\\
	@export BAR=baz; \\\\
	echo hello
	@export FOO=bar; \\\\
	@export BAR=baz; \\\\
	echo world
	@export FOO=bar; \\\\
	@export BAR=baz; \\\\
	echo \\"with quotes\\"
	@echo \\"🤖 Finished task \${GREEN}hello\${NORMAL}.\\"

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\${BOLD}COMMANDS:\${NORMAL}\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\${GREEN}%-30s\${NORMAL} %s\\\\n\\", $$1, $$2}'
"
`;

exports[`subtasks 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

ncolors = $(shell tput colors)
ifeq ($(shell test \${ncolors} -ge 8; echo $$?),0)
	GREEN=$(shell tput setaf 2)
	BOLD=$(shell tput bold)
	NORMAL=$(shell tput sgr0)
endif

.PHONY: all
all: help

.PHONY: hello
hello:                        ## No description
	@echo \\"🤖 Running task \${GREEN}hello\${NORMAL}...\\"
	echo hello
	@echo \\"🤖 Finished task \${GREEN}hello\${NORMAL}.\\"

.PHONY: world
world:                        ## No description
	@echo \\"🤖 Running task \${GREEN}world\${NORMAL}...\\"
	echo \\"running hello\\"
	$(MAKE) hello
	@echo \\"🤖 Finished task \${GREEN}world\${NORMAL}.\\"

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\${BOLD}COMMANDS:\${NORMAL}\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\${GREEN}%-30s\${NORMAL} %s\\\\n\\", $$1, $$2}'
"
`;
